--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Mastering APIs</h1>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
 </body>
 </html>
